refactor: migrate to spring boot 3
Closes XRDDEV-2491